Gui änderung, geleifertes material einpflegbar

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@ lager/geckodriver_macos
 .idea
 .DS_Store
 bestellungen/benötigtes material vom 19.03.2020.pdf
+
+lager/geckodriver_linux64
+
+ui/mainwindow.ui.autosave
+
+ui/ui.pro.user.666deae.22
+bestellungen/benötigtes material vom 19.03.2020.pdf
