Übersicht Aktualisierung geändert auf Instanz zugriff

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ ui/mainwindow.ui.autosave
 
 ui/ui.pro.user.666deae.22
 bestellungen/benötigtes material vom 19.03.2020.pdf
+
+ui/ui.pro.user.67515d6
