--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ ui/ui.pro.user.666deae.22
 bestellungen/benötigtes material vom 19.03.2020.pdf
 
 ui/ui.pro.user.67515d6
+.vscode/launch.json
+ui/ui.pro.user.67515d6.4.9-pre1
