--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ bestellungen/benötigtes material vom 19.03.2020.pdf
 ui/ui.pro.user.67515d6
 .vscode/launch.json
 ui/ui.pro.user.67515d6.4.9-pre1
+uebersicht/grid_fahrzeuge.py
+admin/data_einstellungen.py
