Bugs behoben, neue GUI Features

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ ui/ui.pro.user.67515d6
 ui/ui.pro.user.67515d6.4.9-pre1
 uebersicht/grid_fahrzeuge.py
 admin/data_einstellungen.py
+bestellungen/benoetigtes material vom 23.05.2020.pdf
+bestellungen/benötigtes material vom 23.05.2020.pdf
