einsatznachweise hinzugefügt, bugs behoben, admin lager code übersichtlicher gestaltet

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ RDV.psd
 bestellungen/benoetigtes material vom 25.05.2020.pdf
 bestellungen/benoetigtes material vom 25.05.2020.pdf
 lager/test.py
+ui/test.py
