finished the updater

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,11 @@ update/Database.db
 update/download/test.py
 update/test.db
 update/test/test.py
+ui/ui/test.py
+ui/ui/ui.pro
+ui/ui/ui.pro.user
+ui/ui/ui.pro.user.666deae.22
+ui/ui/ui.pro.user.67515d6
+ui/ui/ui.pro.user.67515d6.4.9-pre1
+update/update/version.txt
+update/update/version.py
