bug fix at updatemanager, program crashed if there was no internet connection

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ ui/ui/ui.pro.user.67515d6
 ui/ui/ui.pro.user.67515d6.4.9-pre1
 update/update/version.txt
 update/update/version.py
+update/version.txt
